# Advent-of-Code

aoc2019/1/: solution.hs
aoc2019/10/: solution.rs
aoc2019/11/: intcode.rs  solution.rs
aoc2019/12/: solution.rs  solution2.rs
aoc2019/13/: solution.rs
aoc2019/14/: solution.rs
aoc2019/15/: Cargo.toml
aoc2019/15/src/: intcode.rs  main.rs
aoc2019/16/: Cargo.toml
aoc2019/16/src/: main.rs
aoc2019/2/: solution.rs
aoc2019/3/: solution.rs
aoc2019/4/: solution.hs
aoc2019/5/: solution.rs
aoc2019/6/: solution.rs
aoc2019/7/: solution.rs
aoc2019/8/: solution.hs
aoc2019/9/: solution.rs
aoc2020/: .gitignore  Cargo.toml  day_template.rs  newday.sh
aoc2020/src/: framework.rs  main.rs  parsers.rs
aoc2020/src/day0/: sol.rs
aoc2020/src/day1/: part1test2  part2_solution  sol.rs
aoc2020/src/day10/: sol.rs
aoc2020/src/day11/: sol.rs
aoc2020/src/day12/: sol.rs
aoc2020/src/day13/: part2_solution  sol.rs
aoc2020/src/day14/: sol.rs
aoc2020/src/day15/: sol.rs
aoc2020/src/day2/: sol.rs
aoc2020/src/day3/: part2_solution  sol.rs
aoc2020/src/day4/: sol.rs
aoc2020/src/day5/: sol.rs
aoc2020/src/day6/: sol.rs
aoc2020/src/day7/: sol.rs
aoc2020/src/day8/: sol.rs
aoc2020/src/day9/: part1_solution  part2_solution  sol.rs
aoc2021/: README.org  init.lisp  run-all.sh
aoc2021/2021/0/: solution.lisp
aoc2021/2021/1/: solution.lisp
aoc2021/2021/10/: solution.lisp
aoc2021/aoc/: aoc.asd  aoc.lisp  parser.lisp  runner.lisp
aoc2022/: .gitignore  init.lisp  run-all.sh
aoc2022/aoc/: aoc.asd  aoc.lisp  parser.lisp  runner.lisp
(+36 files in other folders)
