[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Erik Rimskog <erik.rimskog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
anyhow = "1"
nom = {version = "6", features = ["regexp"]}
regex = "1"
thiserror = "1"
grid = "0.2"
